# computer-architecture

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  test_terminal.sh  test_terminal2.sh
.github/workflows/: build-with-cmake.yml  build-with-make.yml  check-code-style.yml
console/: ALU.c  CU.c  IRC.c  Makefile  console.h  font.c  main.c  printAccumulator.c  printBigCell.c  printCache.c  printCell.c  printCommand.c  printCounters.c  printDecodedCommand.c  printFlags.c  printKeys.c  printTerm.c  printTui.c  processInput.c  test.c
include/: myBigChars.h  myReadKey.h  mySimpleComputer.h  myTerm.h
myBigChars/: Makefile  bc_box.c  bc_getBigCharPosition.c  bc_printA.c  bc_printBigChar.c  bc_readBigChar.c  bc_setBigCharPosition.c  bc_strlen.c  bc_variables.c  bc_writeBigChar.c
myReadKey/: Makefile  rk_myTermRegime.c  rk_readKey.c  rk_readValue.c  rk_restoreMyTerm.c  rk_saveMyTerm.c
mySimpleComputer/: Makefile  sc_accumulatorGet.c  sc_accumulatorInit.c  sc_accumulatorSet.c  sc_cacheInit.c  sc_cacheUpdate.c  sc_commandDecode.c  sc_commandEncode.c  sc_commandValidate.c  sc_icounterGet.c  sc_icounterInit.c  sc_icounterSet.c  sc_memoryGet.c  sc_memoryInit.c  sc_memoryLoad.c  sc_memorySave.c  sc_memorySet.c  sc_regGet.c  sc_regInit.c  sc_regSet.c  sc_reset.c  sc_variables.c
myTerm/: Makefile  mt_calculatePosition.c  mt_clrscr.c  mt_delLine.c  mt_getScreenSize.c  mt_gotoXY.c  mt_setBgColor.c  mt_setCursorVisibility.c  mt_setDefaultColor.c  mt_setFgColor.c  mt_termDequeue.c  mt_termEnqueue.c  mt_termInit.c  mt_variables.c
simpleAssembler/: .clang-format  Makefile  main.cpp  mul.sa
simpleBasic/: Makefile  classes.cpp  classes.hpp  fac.sb  main.cpp
